--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "click-outside-vue3": "^4.0.1",
     "core-js": "^3.6.5",
     "js-cookie": "^3.0.1",
+    "mdi-vue": "^3.0.12",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2",
