--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "js-cookie": "^3.0.1",
     "mdi-vue": "^3.0.12",
+    "vee-validate": "^4.5.8",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2",
