--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VUE_APP_ROOT=http://demo-dev.lcubestudios.io/intouch-frontend/dist/
+VUE_APP_ROOT=/
+## http://demo-dev.lcubestudios.io/intouch-frontend/dist/
 VUE_APP_TITLE=inTouch | powered by LCube Studios
