fix: env root path

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-VUE_APP_ROOT=/
-## http://demo-dev.lcubestudios.io/intouch-frontend/dist/
+VUE_APP_ROOT=http://demo-dev.lcubestudios.io/intouch-frontend/dist/
 VUE_APP_TITLE=inTouch | powered by LCube Studios
