--- a/.env
+++ b/.env
@@ -1,3 +1,22 @@
-VUE_APP_ROOT=/
-## http://demo-dev.lcubestudios.io/intouch-frontend/dist/
-VUE_APP_TITLE=inTouch | powered by LCube Studios
+# Config
+VUE_APP_BASE_URL=/
+VUE_APP_API_URL=https://api.lcubestudios.io/master/messagingapp-api
+VUE_APP_SITE_TITLE=Messaging App | powered by LCube Studios
+
+# Branding
+### upload images to /assets/images
+
+# project title, this will be displayed if no logo image is set (default: Messaging App)
+VUE_APP_PROJECT_TITLE=
+
+## example ../assets/images/logo.png
+VUE_APP_LOGO=
+
+## example ../assets/images/favicon.png
+VUE_APP_FAVICON=
+
+# Theme Customization
+### Use HEX, HEXA, RGBA or Color Names
+
+VUE_APP_PRIMARY_COLOR=purple
+VUE_APP_SECONDARY_COLOR=
