--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules
 
 
 # local env files
-#.env
+.env
 .env.local
 .env.*.local
 
@@ -22,3 +22,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+node_modules
