fix: Disable text selection registering as phone number on mobile | Update user list on add + delete | Auto refresh for new messages

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Config
-VUE_APP_BASE_URL=/intouch-frontend/dist/
+VUE_APP_BASE_URL=/
+# intouch-frontend/dist/
 VUE_APP_API_URL=https://api.lcubestudios.io/master/messagingapp-api
 VUE_APP_SITE_TITLE=Messaging App | powered by LCube Studios
 
