fix(auth): logo env variable

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+## CONFIG
 VUE_APP_BASE_URL='/path/to/project/'
 VUE_APP_API_URL='htts://api.url'
+
+## BRANDING
 VUE_APP_SITE_TITLE='Messaging App | Powered by LCube Studios'
+VUE_APP_LOGO_URL='/path/to/logo/'
