doc(env.sample): update variables

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ VUE_APP_API_URL='htts://api.url'
 ## BRANDING
 VUE_APP_SITE_TITLE='Messaging App | Powered by LCube Studios'
 VUE_APP_LOGO_URL='/path/to/logo/'
+
+## AUTH
+VUE_APP_USERNAME_PARAM='username'
+VUE_APP_PASSWORD_PARAM='password'
