doc(README): update env variables

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,6 @@ VUE_APP_API_URL='htts://api.url'
 VUE_APP_SITE_TITLE='Messaging App | Powered by LCube Studios'
 VUE_APP_LOGO_URL='/path/to/logo/'
 
-## AUTH
+## URL PARAM AUTH KEYS
 VUE_APP_USERNAME_PARAM='username'
 VUE_APP_PASSWORD_PARAM='password'
